<resources>
    <string name="app_name">Transit EMV Checker</string>
    <string name="menu_home">Home</string>
    <string name="menu_transit">Transit</string>
    <string name="menu_emv_details">EMV</string>
    <string name="menu_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_transit">Transit Capabilities</string>
    <string name="title_emv_details">EMV Application Details</string>
    <string name="title_about">About</string>
    <string name="button_home">Button</string>
    <string name="start_emv_media_detection">Start EMV Media Detection</string>
    <string name="waiting_for_emv_media">Waiting for EMV media</string>
    <string name="i_understand_and_agree">I understand and agree</string>
    <string name="navigate_to_home_tab">Navigate to home tab</string>
</resources>