<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"
            android:contentDescription="@string/navigate_to_home_tab"
        />

    <item
            android:id="@+id/navigation_transit"
            android:icon="@drawable/commute_24px"
            android:title="@string/menu_transit"/>

    <item
            android:id="@+id/navigation_emv_details"
            android:icon="@drawable/credit_card_24px"
            android:title="@string/menu_emv_details"/>

    <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/info_24px"
            android:title="@string/menu_about"/>
</menu>